--- a/applications/hello-kenzan/index.html
+++ b/applications/hello-kenzan/index.html
@@ -1,4 +1,5 @@
 <p><h2 style="font-family:sans-serif">Hello from Pat! You've successfully built and run the Hello-Kenzan app.</h2> </p>
 <p style="font-family:sans-serif">The Hello-Kenzan app is a modified version of the <a href="https://hub.docker.com/_/nginx/">nginx web server image</a>. If you open up the <b>kubernetes-ci-cd/hello-kenzan/DockerFile</b>, you will note several things:</p>
-<p>Oh Yeah!</p>
 <img src="DockerFileEx.jpg">
+
+<h1>Hey!</h1>
